--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyrigh 2021 Git
+-->
 <head>
 	<title>Example WebSite</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
